# eNgine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  eNgine.sln
assets/scripts/: enemy.py  player.py
core/: Cargo.toml
core/src/: lib.rs  renderer.rs  scene_manager.rs
eNgine/: eNgine.vcxproj  eNgine.vcxproj.filters  imgui.ini
eNgine/src/: Engine.h  Source.cpp  pch.h
eNgine/src/Debug/: Log.h
eNgine/src/Engine/: Engine.cpp  Engine.h
eNgine/src/ResourceManager/: ResourceManager.cpp  ResourceManager.h  Utility.cpp  Utility.h
eNgine/src/UI/: UI.cpp  UI.h
editor/: .eslintrc.json  package-lock.json  package.json  vite.config.ts
editor/src/: index.html
editor/src-tauri/: Cargo.toml  tauri.conf.json
editor/src-tauri/src/: api.rs  application.rs  main.rs
editor/src/components/: Console.tsx  Container.tsx  Properties.tsx  ResourceExplorer.tsx  RunBar.tsx  SceneExplorer.tsx
editor/src/contexts/: data-context.tsx
editor/src/hooks/: scenes-hooks.tsx
editor/src/pages/: App.tsx  index.tsx
engine/: Cargo.toml  package.json
engine/src/: lib.rs  program.rs  renderer.rs  scene_manager.rs  test.rs
src/: Source.cpp  api.h  eNgine.cpp  eNgine.h  event_manager.cpp  event_manager.h  pch.h  renderer.cpp  renderer.h  resource_manager.cpp  resource_manager.h  scene_manager.cpp  scene_manager.h  ui.cpp  ui.h  window.cpp  window.h
src/Debug/: Config.h
src/Engine/: Engine.cpp  Engine.h
src/ResourceManager/: ResourceManager.cpp  ResourceManager.h  Utility.h
src/Scene/: Scene.cpp  Scene.h
src/UI/: UI.cpp  UI.h
src/utility/: uuid.cpp  uuid.h
